[package]
name        = "robius-directories"
version     = "5.0.1"
authors     = ["Simon Ochsenreither <simon@ochsenreither.de>", "Klim Tsoutsman <klim@tsoutsman.com>", "Kevin Boos <kevinaboos@gmail.com>"]
description = "A tiny mid-level library that provides platform-specific standard locations of directories for config, cache and other data on Linux, Windows macOS, Android, and redox by leveraging the mechanisms defined by the XDG base/user directory specifications on Linux, the Known Folder API on Windows, and the Standard Directory guidelines on macOS."
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/project-robius/robius-directories"
maintenance = { status = "actively-developed" }
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]

[dependencies]
dirs-sys = "0.4.1"

[target.'cfg(target_os = "android")'.dependencies]
robius-android-env = "0.2.0"
jni = "^0.21.1"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "constructors"
harness = false
